[gd_scene load_steps=18 format=3 uid="uid://cgoxd520waiho"]

[ext_resource type="Texture2D" uid="uid://c7x6n8v5pq0qm" path="res://assets/provinces.bmp" id="1_o5qli"]
[ext_resource type="Shader" uid="uid://de8ekpkafjhuh" path="res://shaders/jfa_generation/hqx_borders.gdshader" id="1_o6xl0"]
[ext_resource type="Script" uid="uid://cguys746q2lng" path="res://scripts/compute.gd" id="2_0wfyh"]
[ext_resource type="Shader" uid="uid://sswv8rlsaoha" path="res://shaders/jfa_generation/outine.gdshader" id="4_o6xl0"]
[ext_resource type="Shader" uid="uid://58jh24y7caxu" path="res://shaders/jfa_generation/mask.gdshader" id="5_tefeu"]
[ext_resource type="Texture2D" uid="uid://bro5urv8mkvw0" path="res://assets/color_map.png" id="5_tipki"]
[ext_resource type="Texture2D" uid="uid://b73404h0hkhdt" path="res://assets/color_lookup.png" id="6_85g3d"]
[ext_resource type="Shader" uid="uid://3nhhwbba4syw" path="res://shaders/jfa_generation/outline_province.gdshader" id="7_tipki"]
[ext_resource type="Texture2D" uid="uid://bmk5fr67658ye" path="res://assets/political_map.png" id="8_85g3d"]

[sub_resource type="ViewportTexture" id="ViewportTexture_tipki"]
viewport_path = NodePath("Map/ColorOutput")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_85g3d"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_o6xl0")
shader_parameter/subview_image = SubResource("ViewportTexture_tipki")
shader_parameter/threshold = 1e-05
shader_parameter/aa_scale = 17.6
shader_parameter/base_line_thickness = 0.38197

[sub_resource type="BoxShape3D" id="BoxShape3D_o5qli"]
size = Vector3(56.32, 20.48, 0)

[sub_resource type="ViewportTexture" id="ViewportTexture_choun"]
viewport_path = NodePath("Map/DistanceField")

[sub_resource type="ViewportTexture" id="ViewportTexture_85g3d"]
viewport_path = NodePath("Map/ProvinceBorders")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ya4ey"]
resource_local_to_scene = true
shader = ExtResource("4_o6xl0")
shader_parameter/input_texture = SubResource("ViewportTexture_choun")
shader_parameter/province_distance_field = SubResource("ViewportTexture_85g3d")
shader_parameter/lookup_map = ExtResource("6_85g3d")
shader_parameter/color_map = ExtResource("5_tipki")
shader_parameter/edge_smoothness = 0.0
shader_parameter/edge_threshold = 0.25
shader_parameter/border_color = Color(0, 0, 0, 1)
shader_parameter/gradient_strength = 0.32
shader_parameter/edge_size = 0.11
shader_parameter/province_size_size = 0.10993
shader_parameter/province_border_color = Color(0, 0, 0, 0.231373)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tipki"]
resource_local_to_scene = true
shader = ExtResource("7_tipki")
shader_parameter/lookup_map = ExtResource("6_85g3d")
shader_parameter/mask_map = ExtResource("8_85g3d")
shader_parameter/max_distance = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o6xl0"]
shader = ExtResource("5_tefeu")
shader_parameter/lookup_map = ExtResource("6_85g3d")
shader_parameter/color_map = ExtResource("5_tipki")
shader_parameter/max_distance = 10.0

[node name="Node" type="Node"]

[node name="CameraController" type="CameraController" parent="."]
deceleration = 0.7
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 1.75674, 3.5915, -3.4793)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.143974, -0.380161, 0.101864)

[node name="Map" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("ShaderMaterial_85g3d")
transparent = false
double_sided = false
texture_filter = 0
texture = ExtResource("1_o5qli")
script = ExtResource("2_0wfyh")

[node name="StaticBody3D" type="StaticBody3D" parent="Map"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/StaticBody3D"]
shape = SubResource("BoxShape3D_o5qli")
debug_color = Color(0.979217, 0, 0.389855, 0.42)

[node name="Node3D" type="Node3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.0463, 0, 0)

[node name="ProvinceMap" type="Sprite3D" parent="Map"]
visible = false
transparent = false
double_sided = false
texture_filter = 0
texture = ExtResource("1_o5qli")

[node name="ColorOutput" type="SubViewport" parent="Map"]
disable_3d = true
size = Vector2i(5632, 2048)

[node name="Output" type="ColorRect" parent="Map/ColorOutput"]
material = SubResource("ShaderMaterial_ya4ey")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProvinceBorders" type="SubViewport" parent="Map"]
disable_3d = true
size = Vector2i(5632, 2048)
render_target_update_mode = 1

[node name="ProvinceBordersOut" type="ColorRect" parent="Map/ProvinceBorders"]
material = SubResource("ShaderMaterial_tipki")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DistanceField" type="SubViewport" parent="Map"]
disable_3d = true
size = Vector2i(5632, 2048)
render_target_update_mode = 1

[node name="ColorRect" type="ColorRect" parent="Map/DistanceField"]
material = SubResource("ShaderMaterial_o6xl0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProvinceSelector" type="ProvinceSelector" parent="." node_paths=PackedStringArray("province_parser", "country_data", "ProvinceMap")]
province_parser = NodePath("MapData")
country_data = NodePath("CountryData")
ProvinceMap = NodePath("../Map/ProvinceMap")
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 2.61311, -2.40448)

[node name="MapData" type="MapData" parent="ProvinceSelector"]

[node name="CountryData" type="CountryData" parent="ProvinceSelector"]
provinces_folder = "res://map/provinces"
countries_folder = "res://map/countries"
countries_color_folder = "res://map/country_colors"
terrain_colors = Dictionary[String, Color]({
"No Owner": Color(0.7, 0.5, 0.1, 1),
"Ocean": Color(0.1, 0.4, 0.7, 1)
})

[connection signal="country_selected" from="ProvinceSelector" to="Map" method="_on_province_selector_country_selected"]
[connection signal="province_selected" from="ProvinceSelector" to="Map" method="_on_province_selector_province_selected"]
